// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler v-bind > .attr modifier 1`] = `
"(() => {
  const n0 = t0();
  _renderEffect(() => _setAttr(n0, "foo-bar", id));
  return n0;
})();
"
`;

exports[`compiler v-bind > .camel modifier 1`] = `
"(() => {
  const n0 = t0();
  _renderEffect(() => _setProp(n0, "fooBar", id));
  return n0;
})();
"
`;

exports[`compiler v-bind > .camel modifier w/ no expression 1`] = `
"(() => {
  const n0 = t0();
  _setAttr(n0, "foo-bar", true);
  return n0;
})();
"
`;

exports[`compiler v-bind > .prop modifier 1`] = `
"(() => {
  const n0 = t0();
  _renderEffect(() => _setDOMProp(n0, "fooBar", id));
  return n0;
})();
"
`;

exports[`compiler v-bind > basic 1`] = `
"(() => {
  const n0 = t0();
  _renderEffect(() => _setProp(n0, "id", id));
  return n0;
})();
"
`;

exports[`compiler v-bind > no expression 1`] = `
"(() => {
  const n0 = t0();
  _setProp(n0, "id", true);
  return n0;
})();
"
`;

exports[`compiler v-bind > number value 1`] = `
"(() => {
  const n0 = t0();
  const n1 = _createComponent(Comp, { depth: () => 0 });
  return [n0, n1];
})();
"
`;

exports[`compiler v-bind > with constant value 1`] = `
"(() => {
  const n0 = t0();
  _setProp(n0, "a", void 0);
  _setProp(n0, "b", 1 > 2);
  _setProp(n0, "c", 1 + 2);
  _setProp(n0, "d", 1 ? 2 : 3);
  _setProp(n0, "i", true);
  _setProp(n0, "j", null);
  _setProp(n0, "l", { foo: 1 });
  _setProp(n0, "n", { ...{ foo: 1 } });
  _setProp(n0, "o", [
    1,
    ,
    3
  ]);
  _setProp(n0, "p", [1, ...[2, 3]]);
  _setProp(n0, "q", [1, 2]);
  _setProp(n0, "r", /\\s+/);
  return n0;
})();
"
`;
